--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Le territoire de Clifford</title>
 </head>
 <body>
+    <script>
+        if ( 'geolocation' in navigator) {
+            console.log('Geolocation disponible')
+        } else {
+            console.log('Geolocation non disponible')
+        }
+    </script>
     <h1>HELLO LAURENT ET ABDOUL</h1>
 </body>
 </html>
