--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script>
         if ( 'geolocation' in navigator) {
             console.log('Geolocation disponible')
+            navigator.geolocation.getCurrentPosition(position => {
+                console.log(position.coords.latitude) 
+            console.log(position.coords.longitude)
+            });
         } else {
             console.log('Geolocation non disponible')
         }
