--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="css/style.css">
     <title>Le territoire de Clifford</title>
 </head>
 <body>
@@ -17,6 +19,9 @@
             console.log('Geolocation non disponible')
         }
     </script>
-    <h1>HELLO LAURENT ET ABDOUL</h1>
+        
+    <header>
+        <h1>Le territoire de Clifford - WorkShop 2020 </h1>
+    </header>
 </body>
 </html>
