--- a/index.html
+++ b/index.html
@@ -5,23 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+
     <title>Le territoire de Clifford</title>
 </head>
 <body>
-    <script>
-        if ( 'geolocation' in navigator) {
-            console.log('Geolocation disponible')
-            navigator.geolocation.getCurrentPosition(position => {
-                console.log(position.coords.latitude) 
-            console.log(position.coords.longitude)
-            });
-        } else {
-            console.log('Geolocation non disponible')
-        }
-    </script>
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
         
     <header>
         <h1>Le territoire de Clifford - WorkShop 2020 </h1>
     </header>
+    <main>
+        <div id="mapid"></div>
+    </main>
+    <footer>
+        <p>Le territoire de Clifford - Abdoul, Florian, Laurent </p>
+    </footer>
+    
 </body>
+<script>
+    if ( 'geolocation' in navigator) {
+        console.log('Geolocation disponible')
+        navigator.geolocation.getCurrentPosition(position => {
+            console.log(position.coords.latitude) 
+        console.log(position.coords.longitude)
+        });
+    } else {
+        console.log('Geolocation non disponible')
+    }
+</script>
+<script src="./map.js"></script>
 </html>
