--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
     crossorigin=""></script>
         
     <header>
-        <h1>Le territoire de Clifford - WorkShop 2020 </h1>
+        <img src="icon.png" alt="image_clifford">
+        <h1>Le territoire de Clifford &copy;</h1>
+        <h4> WorkShop 2020 </h4>
     </header>
     <main>
         <div id="mapid"></div>
     </main>
     <footer>
-        <p>Le territoire de Clifford - Abdoul, Florian, Laurent </p>
+        <p><strong>Le territoire de Clifford &copy;</strong> - Abdoul, Florian, Laurent </p>
     </footer>
     
 </body>
