jquery ajax request to database

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     crossorigin=""/>
 
     <title>Le territoire de Clifford</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <!-- Make sure you put this AFTER Leaflet's CSS -->
