--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Le territoire de Clifford</title>
 </head>
 <body>
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
@@ -31,5 +31,6 @@
     </footer>
     
 </body>
+<script src="les-arbres.geojson" type="text/javascript"></script>
 <script src="./map.js"></script>
 </html>
