--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h4> WorkShop 2020 </h4>
     </header>
     <main>
-        <div id="mapid"></div>
+        <div id="myMap"></div>
     </main>
     <footer>
         <p><strong>Le territoire de Clifford &copy;</strong> - Abdoul, Florian, Laurent </p>
