--- a/index.html
+++ b/index.html
@@ -11,15 +11,8 @@
     crossorigin=""/>
 
     <title>Le territoire de Clifford</title>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body>
-    
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
-        
+<body>  
     <header>
         <img src="icon.png" alt="image_clifford">
         <h1>Le territoire de Clifford &copy;</h1>
@@ -35,4 +28,5 @@
 </body>
 <script src="les-arbres.geojson" type="text/javascript"></script>
 <script src="./map.js"></script>
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 </html>
